Finishing up extracting out argument definitions and got tests passing again